--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -27,7 +27,7 @@
   }
 
   .proj {
-    margin-top: 2%;
+    margin-top: 3%;
   }
   .aboutme {
     margin-top: -40%;
